syntax = "proto3";

package user;

option go_package = "MarketShop/cmd/user;user";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (EmptyResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message User {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string middle_name = 4;
  string login = 5;
  string email = 6;
  string password = 7;
  int64 role_id = 8;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message UserResponse {
  User user = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message EmptyResponse {}
